--- a/mask.ipynb
+++ b/mask.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/eleyng/anaconda2/envs/DLpy3/lib/python3.6/site-packages/skimage/viewer/utils/core.py:10: UserWarning: Recommended matplotlib backend is `Agg` for full skimage.viewer functionality.\n",
+      "  warn(\"Recommended matplotlib backend is `Agg` for full \"\n",
+      "/home/eleyng/anaconda2/envs/DLpy3/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -65,12 +77,12 @@
     "        \n",
     "        class_bg_sub = np.zeros(m.shape)\n",
     "        for id in idlist:\n",
-    "            print(\"ID!!!!!!\", id)\n",
+    "            \n",
     "            \n",
     "            if id == 0:\n",
     "                continue\n",
     "            else:\n",
-    "                indices_obj = np.where(class_id==id)[0]\n",
+    "                indices_obj = np.where(class_id==id)\n",
     "                if(len(indices_obj)>0):\n",
     "\n",
     "                    class_obj[indices_obj] = 1\n",
@@ -84,7 +96,7 @@
     "            #visualize.display_images([class_obj])\n",
     "            \n",
     "            \n",
-    "        assert(False)\n",
+    "        \n",
     "         \n",
     "        class_bg = np.asarray(class_id - class_bg_sub).astype(np.bool)\n",
     "        if np.count_nonzero(class_bg) > 0:\n",
@@ -112,8 +124,8 @@
     "                \n",
     "        mask = np.stack(mask, axis=-1)\n",
     "        class_ids = np.array(class_ids, dtype=np.int32)\n",
-    "        #print(\"CLASS IDs\", class_ids)\n",
-    "        \n",
+    "        print(\"CLASS IDs\", class_ids)\n",
+    "        assert(False)\n",
     "        return mask, class_ids\n",
     "    \n",
     "\n"
@@ -121,16 +133,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--------------------------------------------------\n",
-      "ID!!!!!! 0\n",
-      "ID!!!!!! 33\n"
+      "--------------------------------------------------\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-9a4ac614e0e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mload_mask\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-1-2e6261751925>\u001b[0m in \u001b[0;36mload_mask\u001b[0;34m()\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 79\u001b[0;31m         \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     80\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m         \u001b[0mclass_bg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_id\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mclass_bg_sub\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbool\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
    ],
