--- a/mask.ipynb
+++ b/mask.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/eleyng/anaconda2/envs/DLpy3/lib/python3.6/site-packages/skimage/viewer/utils/core.py:10: UserWarning: Recommended matplotlib backend is `Agg` for full skimage.viewer functionality.\n",
-      "  warn(\"Recommended matplotlib backend is `Agg` for full \"\n",
-      "/home/eleyng/anaconda2/envs/DLpy3/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
@@ -67,9 +55,8 @@
     "        # Read image as array\n",
     "        print(\"-\"*50)\n",
     "        \n",
+    "        #m = skimage.io.imread(\"/home/eleyng/cs230-project/data/170908_061535211_Camera_5_instanceIds.png\")\n",
     "        m = skimage.io.imread(\"/home/eleyng/Mask_RCNN/train_label_10/170908_061502408_Camera_5_instanceIds.png\")\n",
-    "        \n",
-    "        \n",
     "        \n",
     "        class_id = m//1000\n",
     "        \n",
@@ -83,46 +70,23 @@
     "                continue\n",
     "            else:\n",
     "                indices_obj = np.where(class_id==id)\n",
+    "                class_obj = np.zeros(m.shape)\n",
     "                if(len(indices_obj)>0):\n",
     "\n",
     "                    class_obj[indices_obj] = 1\n",
     "                    mask.append(class_obj)\n",
     "                    class_ids.append(id)\n",
     "                    class_bg_sub = id*class_obj\n",
-    "                    \n",
     "                    viewer = ImageViewer(class_obj)\n",
-    "                    viewer.show()\n",
-    "                    \n",
-    "            #visualize.display_images([class_obj])\n",
-    "            \n",
-    "            \n",
-    "        \n",
+    "                    viewer.show()       \n",
     "         \n",
     "        class_bg = np.asarray(class_id - class_bg_sub).astype(np.bool)\n",
     "        if np.count_nonzero(class_bg) > 0:\n",
     "            mask.append(class_bg)\n",
     "            class_ids.append(0)\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "                    \n",
-    "                    \n",
-    "        \n",
-    "        '''\n",
-    "        for f in next(os.walk(mask_dir))[2]:\n",
-    "            if f.endswith(\".png\"):\n",
-    "                \n",
-    "                \n",
-    "                m = skimage.io.imread(os.path.join(mask_dir, f)).astype(np.bool)\n",
-    "                mask.append(m)\n",
-    "                tlabel = np.asarray(Image.open(os.path.join(mask_dir, f)))\n",
-    "                class_id = tlabel//1000\n",
-    "                class_ids.append(class_id)\n",
-    "                print(\"CLASSID\", class_id)\n",
-    "        '''\n",
-    "                \n",
+    "                       \n",
     "        mask = np.stack(mask, axis=-1)\n",
+    "        \n",
     "        class_ids = np.array(class_ids, dtype=np.int32)\n",
     "        print(\"CLASS IDs\", class_ids)\n",
     "        assert(False)\n",
@@ -133,29 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------------------------------------------------\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-9a4ac614e0e0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mload_mask\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-1-2e6261751925>\u001b[0m in \u001b[0;36mload_mask\u001b[0;34m()\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 79\u001b[0;31m         \u001b[0;32massert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     80\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     81\u001b[0m         \u001b[0mclass_bg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_id\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mclass_bg_sub\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbool\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "load_mask()"
    ]
